# panther-studio

./: .gitignore  ARRANGEMENT_SYSTEM.md  AUDIO_ANALYSIS_PIPELINE.md  AUDIO_ARCHITECTURE.md  AUDIO_ENGINE_BREAKDOWN.md  AUTOTUNE_ENGINE.md  AUTO_UPDATE_SYSTEM.md  CLIP_EDITING.md  COMPETITOR_GAP_REPORT.md  CREATIVE_DIRECTION_ENGINE.md  DELIVERY_REPORT_PROMPT_1.md  DELIVERY_REPORT_PROMPT_2.md  DELIVERY_REPORT_PROMPT_3.md  DELIVERY_REPORT_PROMPT_4.md  DELIVERY_REPORT_PROMPT_5.md  DELIVERY_REPORT_PROMPT_7.md  DELIVERY_REPORT_PROMPT_9.md  DESKTOP_APP_ARCHITECTURE.md  DSP_LIMITATIONS.md  EFFECTS_ENGINE.md  EXPORT_PIPELINE.md  FINAL_DELIVERY_REPORT.md  FINAL_INTELLIGENCE_REPORT.md  FINAL_MAX_DAW_REPORT.md  FULL_PROJECT_ARCHITECTURE.md  GITHUB_RELEASES_UPDATER.md  IMPORT_SYSTEM.md  INSTRUMENTAL_BUILDER.md  KNOWN_ISSUES.md  KNOWN_LIMITATIONS.md  LOCAL_ACCOUNTS.md  LOCAL_COMPOSER.md  LOUDNESS_SYSTEM.md  MASTERING_ASSISTANT.md  MASTERING_INTELLIGENCE.md  MASTERING_SYSTEM.md  MIC_SETUP_SYSTEM.md  MIDI_ENGINE.md  MIXER_SYSTEM.md  MIX_ASSISTANT.md  (+34 more)
.github/workflows/: release.yml
scripts/: build-updater-release.cjs  gen-icon.cjs  make-latest-manifest.cjs  serve-update.cjs
src/: App.tsx  index.css  main.tsx  tauri.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/audio/: AudioEngine.ts  autoEnhance.ts  autoMaster.ts  autotune.ts  beatDiscovery.ts  beatIntelligence.ts  cleanup.ts  composer.ts  export.ts  instruments.ts  liveVocalDirector.ts  loudness.ts  lyrics.ts  smf.ts  (+7 more)
(+59 files in other folders)
